@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/08/24 08:34:46 wiz Exp $
-
-BLAKE2s (pytest-cov-2.12.1.tar.gz) = c7e0e492945f85217efa4f91d706edd598e740a49b18a8e07e69c5ebd6c9f8b3
-SHA512 (pytest-cov-2.12.1.tar.gz) = 4c234178febeba1ce93ec0804c3efe181d5d88db9ac02effe14e62eb3b0f7ca1f8757fb4f360551e0d3e35a3b6207892afea85611a49db6c71a2dbaacabc5375
-Size (pytest-cov-2.12.1.tar.gz) = 60395 bytes
